<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

            <item
                android:id="@+id/bottom_home"
                android:icon="@drawable/baseline_home_24"
                android:title="@string/inicio" />
            <item
                android:id="@+id/bottom_play"
                android:icon="@drawable/baseline_sports_baseball_24"
                android:title="@string/jugar" />
            <item
                android:id="@+id/bottom_chat"
                android:icon="@drawable/baseline_chat_bubble_24"
                android:title="@string/chat"/>
            <item
                android:id="@+id/bottom_profile"
                android:icon="@drawable/baseline_person_24"
                android:title="@string/perfil" />

</menu>