<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:minHeight="850dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainLayout"
        android:background="#353434"
        tools:context=".fragments.fragmentsMain.FragmentLogin">


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et1"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:fontFamily="@font/robotoregular"
            app:boxBackgroundColor="#4A4949"
            app:boxCornerRadiusTopStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusBottomEnd="30dp"
            style="@style/TextInputLayoutStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.33">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputImail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingStart="30dp"
                android:textColor="@color/white"
                android:fontFamily="@font/robotoregular"
                android:textSize="16sp"
                android:background="@null"
                android:inputType="textVisiblePassword"
                style="@style/EditTextTheme"
        />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et2"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:fontFamily="@font/robotoregular"
            app:boxBackgroundColor="#4A4949"
            app:boxCornerRadiusTopStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusBottomEnd="30dp"
            style="@style/TextInputLayoutStyle"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/yellow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.425">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPass"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingStart="30dp"
                android:inputType="textPassword"
                android:fontFamily="@font/robotoregular"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:background="@null"
                style="@style/EditTextTheme"

        />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
            android:id="@+id/btnOlvidaContrasena"
            android:text="@string/btnOlvidaContraseña"
            android:letterSpacing="0.009"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:fontFamily="@font/robotomedium"
            android:backgroundTint="#353434" android:textColor="@color/yellow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.58"/>

    <Button
            android:id="@+id/button2"
            android:text="@string/btnRegistrate"
            android:textAllCaps="false"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:fontFamily="@font/robotomedium"
            android:backgroundTint="@color/button_amarillo_pressed" android:textColor="#000000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.9"
            style="@style/RoundButton"
            android:letterSpacing="0.009"/>
    <Button
            android:id="@+id/buttonLogin"
            android:text="@string/btnLogin"
            android:textAllCaps="false"
            android:layout_width="320dp"
            android:layout_height="62dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.52"
            android:paddingLeft="70dp" android:paddingRight="70dp"
            android:fontFamily="@font/robotomedium"
            android:letterSpacing="0.009"
            android:backgroundTint="@color/button_amarillo_pressed"
            android:textColor="#000000" android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.5"
            style="@style/RoundButton"/>

    <Button
            android:id="@+id/buttonGoogle"
            android:text="@string/btnGoogle"
            android:textAllCaps="false"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:drawableStart="@drawable/iconogoogle"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.74"
            android:fontFamily="@font/robotoregular"
            android:textColor="@color/white" android:textSize="16sp"
            android:hapticFeedbackEnabled="false"
            android:backgroundTint="@color/button_gris_pressed"
            style="@style/RoundButton"
            android:letterSpacing="0.009"
    />

    <Button
            android:id="@+id/buttonFacebook"
            android:text="@string/btnTwitter"
            android:textAllCaps="false"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:drawableStart="@drawable/tuiter"
            android:drawablePadding="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.82"
            android:fontFamily="@font/robotoregular"
            android:textColor="@color/white" android:textSize="16sp"
            android:hapticFeedbackEnabled="false" android:backgroundTint="@color/button_gris_pressed"
            style="@style/RoundButton"
            android:letterSpacing="0.009"/>
    <ImageView
            android:src="@drawable/playtronic"
            android:layout_width="300dp"
            android:layout_height="100dp" android:id="@+id/tronicLogo"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.11"/>


</androidx.constraintlayout.widget.ConstraintLayout>
