<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:minHeight="850dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainLayout"
        android:background="#353434"
        tools:context=".fragments.fragmentsMain.FragmentAvisoEnlaceAcc">


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayoutemail"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:fontFamily="@font/robotoregular"
            app:boxBackgroundColor="#4A4949"
            app:boxCornerRadiusTopStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusBottomEnd="30dp"
            style="@style/TextInputLayoutStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.365"/>



    <Button
            android:id="@+id/buttonAceptarExito"
            android:text="@string/aceptar"
            android:textAllCaps="false"
            android:layout_width="350dp"
            android:layout_height="62dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.9"
            android:paddingLeft="20dp" android:paddingRight="20dp"
            android:fontFamily="@font/robotomedium"
            android:backgroundTint="@color/button_amarillo_pressed"
            android:textColor="#000000" android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.5"
            style="@style/RoundButton"
            android:letterSpacing="0.009"/>

    <ImageView
            android:src="@drawable/troniclogosolo"
            android:layout_width="300dp"
            android:layout_height="85dp" android:id="@+id/tronicLogo"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.05"/>

    <ImageView
            android:src="@drawable/verifyy"
            android:layout_width="300dp"
            android:layout_height="180dp" android:id="@+id/verifyLogo"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.61"/>
    <TextView
            android:text="@string/accCreated"
            android:fontFamily="@font/robotomedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvRecuPass"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.22" app:layout_constraintHorizontal_bias="0.46
"
            android:textSize="30sp" android:textColor="#FFFFFF"/>
    <TextView
            android:layout_width="327dp"
            android:layout_height="76dp"
            android:text="@string/accCreated2"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:ems="10"
            android:id="@+id/editTextText"
            android:fontFamily="@font/robotoregular"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.31" app:layout_constraintHorizontal_bias="0.5"/>


</androidx.constraintlayout.widget.ConstraintLayout>