<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:minHeight="850dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainLayout"
        android:background="#353434"
        tools:context=".fragments.fragmentsMain.FragmentLogin">


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayoutemail"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:fontFamily="@font/robotoregular"
            app:boxBackgroundColor="#4A4949"
            app:boxCornerRadiusTopStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusBottomEnd="30dp"
            style="@style/TextInputLayoutStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.365">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingStart="30dp"
                android:textColor="@color/white"
                android:fontFamily="@font/robotoregular"
                android:textSize="16sp"
                android:background="@null"
                android:inputType="textVisiblePassword"
                style="@style/EditTextTheme"
        />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
            android:id="@+id/buttonRestContrasena"
            android:text="@string/restPass"
            android:textAllCaps="false"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.4625"
            android:paddingLeft="20dp" android:paddingRight="20dp"
            android:fontFamily="@font/robotomedium"
            android:backgroundTint="@color/button_amarillo_pressed"
            android:textColor="#000000" android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.5"
            style="@style/RoundButton"
            android:letterSpacing="0.009"/>

    <ImageView
            android:src="@drawable/troniclogosolo"
            android:layout_width="300dp"
            android:layout_height="100dp" android:id="@+id/tronicLogo"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.05"/>
    <TextView
            android:text="@string/recuPass"
            android:fontFamily="@font/robotomedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvRecuPass"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.22" app:layout_constraintHorizontal_bias="0.25
"
            android:textSize="32sp" android:textColor="#FFFFFF"/>
    <TextView
            android:layout_width="327dp"
            android:layout_height="46dp"
            android:text="@string/introduCorreo"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:ems="10"
            android:id="@+id/editTextText"
            android:fontFamily="@font/robotoregular"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.31" app:layout_constraintHorizontal_bias="0.435"/>


</androidx.constraintlayout.widget.ConstraintLayout>